test/corpus/game.txt
==================
Game
==================

-- this is an example of a game
game TestGame
type Board = Array(1,1) of Int
type Input = Bool

-- test func 2
f : Int
f = 32

-- another cool func
another_CoolFunc32Name : Int -> Bool
another_CoolFunc32Name(x) = x > 0

---

(source_file
  (comment)
  (game_definition (upperIdentifier))
  (type_definition (upperIdentifier) (builtin_type (array_type (number) (number) (builtin_type))))
  (type_definition (upperIdentifier) (builtin_type))
  (comment)
  (function_definition (identifier) (builtin_type)
    (pattern (identifier) (number))
  )
  (comment)
  (function_definition (identifier) (builtin_type) (builtin_type)
    (pattern (identifier) (parameter_list (identifier)) (binary_expr (identifier) (number)))
  )
)
